<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="4dip"
    android:paddingRight="4dip"
    android:fadingEdge="none" >

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- 今日の天気 -->

        <TextView
            android:id="@+id/todayHeader"
            style="@style/sectionHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dip"
            android:text="@string/today_text" />

        <nikeno.Tenki.DayView
            android:id="@+id/todayTable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <!-- 明日の天気 -->

        <TextView
            android:id="@+id/tomorrowHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dip"
            android:text="@string/tomorrow_text" />

        <nikeno.Tenki.DayView
            android:id="@+id/tomorrowTable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <!-- 週間天気 -->

        <TextView
            android:id="@+id/weekHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dip"
            android:text="@string/weekly_text" />

        <nikeno.Tenki.WeekView
            android:id="@+id/weekTable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/open_browser"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/main_open_browser" />

            <Button
                android:id="@+id/area_select"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/main_pref" />
        </LinearLayout>
    </LinearLayout>

</ScrollView><!--
		<LinearLayout android:id="@+id/LinearLayout01"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		xmlns:android="http://schemas.android.com/apk/res/android">
		<WebView></WebView> </LinearLayout>
-->
