<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_height="fill_parent"
	android:layout_width="fill_parent">

	<FrameLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout android:layout_width="fill_parent"
			android:orientation="vertical"
			android:layout_height="fill_parent" android:paddingTop="58dip">
			<ListView android:layout_height="fill_parent"
				android:layout_width="fill_parent"
				android:id="@android:id/list"></ListView>
			<TextView android:id="@android:id/empty"
				android:padding="4sp" android:layout_height="fill_parent"
				android:gravity="center" android:layout_width="fill_parent"
				android:text="@string/area_select_search_empty"></TextView>
		</LinearLayout>

		<LinearLayout android:id="@+id/TableLayout01" android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:background="@drawable/search_plate_global"
			android:paddingTop="6dip" android:paddingBottom="12dip"
			android:paddingLeft="6dip" android:paddingRight="6dip">
			<EditText android:layout_width="fill_parent"
				android:hint="@string/area_select_search_label"
				android:layout_height="fill_parent" android:id="@+id/searchText"
				android:layout_weight="1" android:imeOptions="actionSearch"></EditText>
			<Button android:text="@string/area_select_search"
				android:layout_width="wrap_content" android:gravity="center"
				android:layout_height="fill_parent" android:id="@+id/searchButton"></Button>
		</LinearLayout>
	</FrameLayout>
</LinearLayout>
